class ApplicationController < ActionController::Base
  # 所有控制器共享的逻辑放在这里
  # 例如：认证、错误处理等
end
