@startuml
!theme plain

package "Controllers" {
  class ApplicationController {
    + current_user
    + authenticate_user!
    --
    # render_error(message, status)
  }

  class UsersController {
    + index
    + show
    + create
    + update
    + destroy
    --
    - set_user
    - user_params
  }

  class RoomsController {
    + index
    + show
    + create
    + update
    + destroy
    --
    - set_room
    - room_params
  }

  class MessagesController {
    + index
    + show
    + create
    + update
    + destroy
    --
    - set_message
    - set_room_for_nested
    - message_params
  }

  class MembersController {
    + index
    + create
    + destroy
    --
    - set_room
    - set_member
    - member_params
  }
}

package "Models" {
  class User <<ActiveRecord>>
  class Room <<ActiveRecord>>
  class Message <<ActiveRecord>>
  class Member <<ActiveRecord>>
}


' 继承关系'
ApplicationController <|-- UsersController
ApplicationController <|-- RoomsController
ApplicationController <|-- MessagesController
ApplicationController <|-- MembersController

' 控制器与模型交互关系 (CRUD)'
UsersController ..> User : manages
RoomsController ..> Room : manages
MessagesController ..> Message : manages
MembersController ..> Member : manages

' 控制器之间的协作/依赖'
MessagesController .up.> Room : uses set_room_for_nested
MembersController .up.> Room : uses set_room

@enduml